--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -2,24 +2,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="css/style.css">
-		
-		<script src="js/globals.js"></script>
-		<script src="js/floatingscore.js"></script>		
-		<script src="js/position.js"></script>
-		<script src="js/cascademanager.js"></script>
-		<script src="js/brick.js"></script>
-		<script src="js/button.js"></script>
-		<script src="js/direction.js"></script>
-		<script src="js/animmanager.js"></script>
-		<script src="js/shapefactory.js"></script>
-		<script src="js/shapemanager.js"></script>
-		<script src="js/eventmanager.js"></script>
-		<script src="js/shape.js"></script>
-		<script src="js/ui.js"></script>
-		<script src="js/game.js"></script>
-		<script src="js/matrix.js"></script>
-		<script src="js/utils.js"></script>
-		<script src="js/main.js"></script>
+		<script src="all.min.js"></script>
 	</head>
 	<body>
 		<div id="content">
