--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="css/style.css">
-		<script src="all.min.js"></script>
+		<script src="js/all.min.js"></script>
 	</head>
 	<body>
 		<div id="content">
