--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -13,6 +13,7 @@
 					<input type="button" class="shadowed" id="gridOnButton" value="GRID ON"/>
 					<input type="button" class="shadowed" id="gridOffButton" value="GRID OFF"/>
 					<input type="button" class="shadowed" id="continueButton" style="display:none" value="RESUME"/>
+					<span id="fpsCounter"></span>
 				</div>
 				<div id="matrix" style="display:none;"></div>
 				<canvas class="shadowed" id="tetrisMenu"></canvas>
